src/test/deca/context/valid/SansObjet/DeclVar-Mult-float-float-float.deca
// Description:
//    Declaration of a float variable using * operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    float y = 10.01; 
    float z = x * y ; 
}
