src/test/deca/context/invalid/SansObjet/DeclVar-Mult-string-string-boolean.deca
// Description:
//    Declaration of a string variable using * operation between a string variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "World"; 
    boolean y = true; 
    string z = x * y ; 
}
